--- a/ProjectProposal.tex
+++ b/ProjectProposal.tex
@@ -156,10 +156,10 @@
 \section{Technical Design}
 
 	\subsection{Mobile Application}
-	Design team 3 will build a mobile application for a tablet device which will allow a user to: download a database of safety equipment and locations to the mobile device to allow the user to operate with out access to the intranet, scan bar codes of locations and safety devices to allow the user to answer a seres of pass fail inspection questions, push question responses back to the database over the sponsor's intranet.
+	Design team 3 will build a mobile application for a tablet device which will allow a user to: download a database of safety equipment and locations to the mobile device to allow the user to operate with out access to the internet, scan bar codes of locations and safety devices to allow the user to answer a series of pass fail inspection questions, push question responses back to the database over the sponsor's internet. This last data push to the database will be completed when the user gets back to their desk, where there is WIFI available.
 	\subsubsection{Mobile User Interface \& Experience}
 	Design Team 3 will create a user interface and experience (UI/UX) to guide the safety inspector through the process of an inspection. In  Figure~\ref{fig:login}, the user is prompted to login so that the data relevant to that user can be synced to the mobile device. By doing so that the inspection results can be recorded under the correct employee's name. \\
-	If the user's device is connected to the intranet, they will press the button labeled sync Figure~\ref{fig:splash} which will retreve the inspection locations and safety device information pertinent to the user.
+	If the user's device is connected to the internet, they will press the button labeled sync Figure~\ref{fig:splash} which will retrieve the inspection locations and safety device information pertinent to the user.
 	Once the inspector reaches a location they will press the Scan Barcode Location button shown in Figure~\ref{fig:splash}
 	\begin{figure}[h]
 
