Minor spelling changes and added some mock-ups

--- a/ProjectProposal.tex
+++ b/ProjectProposal.tex
@@ -37,12 +37,12 @@
 	Most risks are going to revolve around the security of our proposed system. This is solved by the implementation on ArcelorMittal's servers. ArcelorMittal has their own security team to ensure that the proposed system once moved to a production environment will be secure. In addition the data we are dealing with is not confidential.That being so, all code will be written in a secure manner, special attention will be paid to SQL queries, and SQL injections.   
 	\subsection{Overview of System Models}
 	As the nature of this project is more software oriented then hardware, developing models for system senors, actuators, interfaces or other principle level system components are not a main concern of Team 3. So as a result, no validation is needed. Similarly, issues involving control processes are not a concern. \\
-	However, Operating Systems at different interconnections distances is a concern, as our sponsor has a special requirement of no WIFI at certain times when the application is operating. So that is one issue that has to be accomodated. Another issue is going to be the storage on the Nexus 7 tablets. A usual tablet holds up to about 16GB of memory, so we need to make sure that our application is well within that limit.  In addition our software is limited to run on the hardware specfics of the Nexus 7, which are ULP GeForce graphics card, CPU is detailed as Quad Core. There is 1 GB of RAM.   \\
+	However, Operating Systems at different interconnections distances is a concern, as our sponsor has a special requirement of no WIFI at certain times when the application is operating. So that is one issue that has to be accommodated. Another issue is going to be the storage on the Nexus 7 tablets. A usual tablet holds up to about 16GB of memory, so we need to make sure that our application is well within that limit.  In addition our software is limited to run on the hardware specifics of the Nexus 7, which are ULP GeForce graphics card, CPU is detailed as Quad Core. There is 1 GB of RAM.   \\
 	
 	SOMEONE CITE THIS PLEASE http://www.gsmarena.com/asus_google_nexus_7-4850.php \\
 	
 	\subsection{Developmental Strategy}
-	Team three has picked a bottom up approach. We have chosen to implement the lower levels first. This will be easier for the team three because we can test the database communication first. In addition when we are trying to display data on the user interface, we have an implemented API to make that connection for testing. This is going to be easier then just hard coding data which will not be as efficient.  We also set up the development enviornments for testing. 
+	Team three has picked a bottom up approach. We have chosen to implement the lower levels first. This will be easier for the team three because we can test the database communication first. In addition when we are trying to display data on the user interface, we have an implemented API to make that connection for testing. This is going to be easier then just hard coding data which will not be as efficient.  We also set up the development environments for testing. 
 
 \section{High Level Languages}\label{highlevel}
 	\subsection{Languages}
@@ -187,7 +187,7 @@
 		\begin{minipage}[t]{0.5\textwidth}
 		\begin{itemize}
 			\item \textbf{Integrates With Sponsor IT}\\
-			Design Team 3's sponsor ArcelorMittal USA uses a Microsoft Windows based infastructure for their internal IT. We must ensure our choice of framework is compatable in a Microsoft server environment.
+			Design Team 3's sponsor ArcelorMittal USA uses a Microsoft Windows based infrastructure for their internal IT. We must ensure our choice of framework is compatible in a Microsoft server environment.
 
 			\item \textbf{Documentation}\\
 			One of the most important parts of any software library is the documentation. If a developer is required to dig through source code to determine how a library works because there are no instructions explaining its implementation, the amount of time which will be required will increase exponentially and will result in code that is more prone to defects.
@@ -208,7 +208,7 @@
 		\end{itemize}
 		\end{minipage}\\
 		\\
-		Then we chose from the plethora of existing frameworks seven which are cominly used in web app development to compare agents these requirements. The each criteria is marked on a log scale of ether 1,3, or 9 and displayed in Table~\ref{WebMatrix}.
+		Then we chose from the plethora of existing frameworks seven which are commonly used in web app development to compare agents these requirements. The each criteria is marked on a log scale of ether 1,3, or 9 and displayed in Table~\ref{WebMatrix}.
 		
 		\begin{itemize}
 			\item \textbf{Ruby on Rails} \\
