--- a/DatabaceChart.tex
+++ b/DatabaceChart.tex
@@ -25,7 +25,7 @@
 	Fast insertion & 1 & 3 & 3 & 3 & 3 & 3 & 3 & 3 & 9 & 9      \\ \cline{2-11}
 	Large Data sets & 1 & 9 & 9 & 9 & 9 & 3 & 3 & 3 & 9 & 9      \\ \cline{2-11}
 	Enterprise Security & 1 & 9 & 9 & 9 & 9 & 3 & 3 & 3 & 3 & 3      \\ \cline{2-11}
-	Team Expereance & 9 & 1 & 1 & 1 & 1 & 3 & 1 & 1 & 3 & 1      \\ \cline{2-11}
+	Team Experience & 9 & 1 & 1 & 1 & 1 & 3 & 1 & 1 & 3 & 1      \\ \cline{2-11}
 	The Correct Price & 9 & 9 & 1 & 1 & 1 & 9 & 9 & 9 & 9 & 9      \\ \hhline{~----------} % \hhline{~==========}
 	\textbf{Total} & \cellcolor{gray!50}\textbf{51} & \cellcolor{gray!20}47 & \cellcolor{gray!20}45 & \cellcolor{gray!20}37 & \cellcolor{gray!20}31 & \cellcolor{gray!20}45 & \cellcolor{gray!20}35 & \cellcolor{gray!20}29 & \cellcolor{gray!20}39 & \cellcolor{gray!20}35  \\  \cline{2-11}
 	
