--- a/ProjectProposal.tex
+++ b/ProjectProposal.tex
@@ -47,7 +47,7 @@
 \section{High Level Languages}\label{highlevel}
 	\subsection{Languages}
 	As for compilers on the Back End most things will be written in the programming language Python, which does not have a compiler. For the email service, SMTP python libraries will be used, as well as a couple web framework libraries. The web framework Libraries are provided by Django, which is based off of Python. \\
-	Android Application Development is written in Java which does have a compiler. On the admin side, Jquery, Twitter's Bootstrap will be used for web development.   \\ SOMEWHERE IN HERE REFER TO THE COMPARISIONS DOWN BELOW IN A DIFFERENT FIGURE
+	Android Application Development is written in Java which does have a compiler. On the administrator side, Jquery, Twitter's Bootstrap will be used for web development.   \\ SOMEWHERE IN HERE REFER TO THE COMPARISIONS DOWN BELOW IN A DIFFERENT FIGURE
 
 
 \part{Technical}
@@ -187,11 +187,7 @@
 		\begin{minipage}[t]{0.5\textwidth}
 		\begin{itemize}
 			\item \textbf{Integrates With Sponsor IT}\\
-<<<<<<< HEAD
-			Design Team 3's sponsor ArcelorMittal USA uses a Microsoft Windows based infrastructure for their internal IT. We must ensure our choice of framework is compatible in a Microsoft server environment.
-=======
 			Design Team 3's sponsor ArcelorMittal USA uses a Microsoft Windows based software for their internal IT. We must ensure our choice of framework is compatible in a Microsoft server environment.
->>>>>>> 41aa98766746a035e20e50dffd3364187cbe6364
 
 			\item \textbf{Documentation}\\
 			One of the most important parts of any software library is the documentation. If a developer is required to dig through source code to determine how a library works because there are no instructions explaining it's implementation, the amount of time which will be required will increase exponentially and will result in code that is more prone to defects.
@@ -265,30 +261,30 @@
 The only cost incurred by the design team will be purchasing a Nexus 7 tablet. The tablet will be of the same model and year or similar to the sponsor's devices.  Due to their security measures, we are unable to use one of the sponsor's own devices. To speed up the process of development, a group member has volunteered their Nexus 7 tablet to be used.
 \part{Project Management}
 \section{Scheduling}
-		In order to better adapt to the complex requirements defined in Section~\ref{def}, we have broken the tasks into four iterative cycles. Each cycle is planed to address a number of the design requirements which must be develop in or near parallel do to the highly interconnected nature of the individual subsystems. 
+		In order to better adapt to the complex requirements defined in Section~\ref{def}, we have broken the tasks into four iterative cycles. Each cycle is planned to address a number of the design requirements, which must be developed at the same time, due to the highly interconnected nature of the individual subsystems. 
 		
 		
 	\subsection{Preliminary Set Up}\label{cyc1}
-		In the first cycle the team pursues actions which move to the understanding of the finer details of the system it has been tasked to build. This cycle includes several instances of contact with the sponsor in order to both better understand the customers needs and build a relationship for ongoing communication. At the end of this cycle the team will deliver a project proposal to the faculty advisor and the project sponsor along with having verified that the most basic functionality of the database, web application, Android application and design mock-ups. 
+		In the first cycle the team pursues actions which move to the understanding of the finer details of the system it has been tasked to build. This cycle includes several instances of contact with the sponsor in order to both better understand the customer's needs and build a relationship for ongoing communication. At the end of this cycle the team will deliver a project proposal to the faculty advisor and the project sponsor along with verifying the basic functionality of the database, web application, Android application and design mock-ups. 
 		
 		\begin{itemize}
 			\item\textbf{Meet with Sponsor:} (The Team)\\
-			The team prepares questions and meets in person with the Jim Lang from ArcelorMittal. In order to better understand the needs defined in the project description. In this meeting the project sponsor was asked to describe key features and furthermore, what a successfully project looked like.
+			The team prepares questions and meets in person with the ArcelorMittal sponsor. In order to better understand the needs defined in the project description. In this meeting the project sponsor was asked to describe key features and furthermore, what a successfully project looked like.
 			
 			\item \textbf{Solidify Understanding of Project:} (The Team)\\
-			In this task the Team meets to discuss what was learned in the meeting with the project sponsor previously. In order to layout the framework in which the team can build the requested system.
+			In this task, the team meets to discuss what was learned in the meeting with the project sponsor previously. This assisted the team to build the requested system, because notes were taken immediately after the meeting to ensure nothing was left out. 
 			
 			\item\textbf{Additional Questions for Sponsor:} (The Team)\\
-			After exhaustive discussion on the both the high level work flows and technical feasibility of the project the team will compose a set of questions to be electronically mailed to the project sponsor in order to clear up lingering discontinuity in the teams understanding of the system.
+			After exhaustive discussion on the both the high level work flows and technical feasibility of the project, the team will compose a set of questions to be electronically mailed to the project sponsor in order to clear up lingering discontinuity in the teams understanding of the system.
 			
 			\item\textbf{Set up Database:} (Alexandria \& Ian)\\
-			In this task two team members will decide on a framework for building the server side infrastructure for the system. This will include choosing and setting up the server operating system, choosing the main programing language to be used for building the sever infrastructure.
+			In this task,  two team members will decide on a framework for building the server side infrastructure for the system. This will include choosing and setting up the server operating system, choosing the main programing language to be used for building the sever infrastructure.
 			
 			\item\textbf{Hello World on Tablet:} (Kyle)\\
 			In this task a team member will build a simple hello world program for style of android tablet indicated by the project sponsor. In building a hello world program for the tablet the team member will also choose a library for decoding bar codes using the tablet camera. 
 			
 			\item\textbf{Draw Mock ups:} (Trevor)\\
-			In this task a team member will draw the initial designs for the user experiences that will be had in the various user portals of the system so that the project sponsor can have an idea of what the user interface will be like and can give us insights that will help all aspects of the teams design. 
+			In this task a team member will draw the initial designs for the user experiences that will be had in the various user portals of the system so that the project sponsor can have an idea of what the user interface will be like and can give us insights that will help all aspects of the team's design. 
 			
 			\item\textbf{Set up Web Page:} (Seth)\\
 			In this task a team member will setup an initial front end for the administrator web sight. The team member will decide on a set of predefined web objects that can be used to build web applications which will best allows the team to build an effective web application front end. 
@@ -300,10 +296,10 @@ The only cost incurred by the design team will be purchasing a Nexus 7 tablet. T
 		
 		
 	\subsection{Interconnectivity}\label{connect}
-		In the Interconnectivity step design team 3 will focus on building and testing connections between the baseline system, setup in \ref{cyc1}
+		In the interconnectivity step, design team three will focus on building and testing connections between the baseline system, setup in \ref{cyc1}
 		\begin{itemize}
 			\item\textbf{Web speaks to Database:} (Seth)\\
-			This step will consist of establishing a connection between the existing front-end of the admin website developed in 3.1 and the database that will allow the admin site to read from and write to the database.  This functionality will be used for retrieving and modifying information regarding the whereabouts and inspection status of safety equipment. 
+			This step will consist of establishing a connection between the existing front-end of the administrator website developed in 3.1 and the database that will allow the administrator site to read from and write to the database.  This functionality will be used for retrieving and modifying information regarding the whereabouts and inspection status of safety equipment. 
 
 			
 			\item \textbf{Mobile speaks to Database:} (Kyle)\\
@@ -314,7 +310,7 @@ The only cost incurred by the design team will be purchasing a Nexus 7 tablet. T
 
 			
 			\item\textbf{Mock ups and Wire Frames:} (Trevor)\\
-			The user interface of the mobile application and the admin website will be modified after receiving sponsor feedback regarding their current design to better suit the needs and wants of the customer.
+			The user interface of the mobile application and the administrator website will be modified after receiving sponsor feedback regarding their current design to better suit the needs and wants of the customer.
 			
 			
 		\end{itemize}
@@ -324,14 +320,14 @@ The only cost incurred by the design team will be purchasing a Nexus 7 tablet. T
 		\begin{itemize}
 			\item\textbf{Mobile App Development:} (Kyle)\\
 		The implementation of the mobile application will be completed during this phase to produce a fully functioning prototype that is able to scan a barcode and pull information from the database related to that barcode.  The application will then be able to upload inspection results of each item over a WIFI network to the central database.\\		
-			\item \textbf{Web App Development:} (Seth and Ally)\\
-			The front-end and back-end of the admin website will be completed during this phase to produce an initial prototype.  The admin website will be able to receive input from a user regarding barcode and their related specifications and post that information to the database to be used by the mobile application.  This development is to be done in parallel with the mobile application.\\
+			\item \textbf{Web App Development:} (Seth and Alexandria)\\
+			The front-end and back-end of the administrator website will be completed during this phase to produce an initial prototype.  The administrator website will be able to receive input from a user regarding barcode and their related specifications and post that information to the database to be used by the mobile application.  This development is to be done in parallel with the mobile application.\\
 
-			\item\textbf{Database Refinements:} (Ian and Ally)\\
-			The database will be continually refined throughout the development of the admin website and mobile application to address any issues discovered during this development phase.\\
+			\item\textbf{Database Refinements:} (Ian and Alexandria)\\
+			The database will be continually refined throughout the development of the administrator website and mobile application to address any issues discovered during this development phase.\\
 			
 			\item\textbf{Feedback:} (The Team)\\
-			The team will demonstrate the functioning prototype of both the mobile application and admin website to the sponsor and show how they integrate together to achieve a solution to the original problem.  The team will discuss the sponsor’s opinion regarding pros and cons of the implementation and create a plan for any modifications that the customer desires.\\
+			The team will demonstrate the functioning prototype of both the mobile application and administrator website to the sponsor and show how they integrate together to achieve a solution to the original problem.  The team will discuss the sponsor’s opinion regarding pros and cons of the implementation and create a plan for any modifications that the customer desires.\\
 			
 			\item\textbf{New Mock ups:} (Trevor)\\
 			Modification to the user interface design will be made if the sponsor desires.
@@ -343,14 +339,14 @@ The only cost incurred by the design team will be purchasing a Nexus 7 tablet. T
 		\begin{itemize}
 			\item\textbf{Mobile App Development:} (Kyle)\\
 			Any desired design modifications to the mobile application requested by the sponsor in 3.3 will be implemented and tested in this phase. \\
-			\item \textbf{Web App Development:} (Seth and Ally)\\
-			Any desired design modifications to the admin website requested by the sponsor in 3.3 will be implemented and tested in this phase. \\
+			\item \textbf{Web App Development:} (Seth and Alexandria)\\
+			Any desired design modifications to the administrator website requested by the sponsor in 3.3 will be implemented and tested in this phase. \\
 			
-			\item\textbf{Database Refinements:} (Ally)\\
-			Any necessary database changes needed to accommodate modifications made to the mobile application or admin website will be implemented. \\
+			\item\textbf{Database Refinements:} (Alexandria)\\
+			Any necessary database changes needed to accommodate modifications made to the mobile application or administrator website will be implemented. \\
 			
 			\item\textbf{Make project shippable to sponsor:} (The Team)\\
-			The mobile application will be compiled into an executable that can be uploaded on the sponsor’s tablets.  All passwords necessary to access the admin website will be given to the sponsor along with the source code for the website so that the website may be uploaded and hosted wherever the sponsor desires. 
+			The mobile application will be compiled into an executable that can be uploaded on the sponsor’s tablets.  All passwords necessary to access the administrator website will be given to the sponsor along with the source code for the website so that the website may be uploaded and hosted wherever the sponsor desires. 
 
 			
 		\end{itemize}
