actaully finished Kyles

--- a/FastDG.tex
+++ b/FastDG.tex
@@ -12,5 +12,5 @@
 		\fastFT{Collect Data}{}
 		\fastFT{Generate Reports}{}
 	}
-	\fastFT{Recognize Reports}{}	
+	\fastFT{Recognize Failures}{}	
 \end{fast}
