--- a/DatabaceChart.tex
+++ b/DatabaceChart.tex
@@ -22,8 +22,8 @@
 	Ease of Use & 9 & 1 & 1 & 1 & 1 & 3 & 3 & 3 & 1 & 1 \\ \cline{2-11}
 	Documentation & 9 & 3 & 3 & 1 & 1 & 3 & 1 & 1 & 3 & 1 \\ \cline{2-11}
 	Django Support & 9 & 3 & 9 & 3 & 3 & 9 & 9 & 3 & 1 & 1      \\ \cline{2-11}
-	Fast insertion & 1 & 3 & 3 & 3 & 3 & 3 & 3 & 3 & 9 & 9      \\ \cline{2-11}
-	Large Data sets & 1 & 9 & 9 & 9 & 9 & 3 & 3 & 3 & 9 & 9      \\ \cline{2-11}
+	Fast Insertion & 1 & 3 & 3 & 3 & 3 & 3 & 3 & 3 & 9 & 9      \\ \cline{2-11}
+	Large Data Sets & 1 & 9 & 9 & 9 & 9 & 3 & 3 & 3 & 9 & 9      \\ \cline{2-11}
 	Enterprise Security & 1 & 9 & 9 & 9 & 9 & 3 & 3 & 3 & 3 & 3      \\ \cline{2-11}
 	Team Experience & 9 & 1 & 1 & 1 & 1 & 3 & 1 & 1 & 3 & 1      \\ \cline{2-11}
 	The Correct Price & 9 & 9 & 1 & 1 & 1 & 9 & 9 & 9 & 9 & 9      \\ \hhline{~----------} % \hhline{~==========}
