Changes to customer needs

--- a/ProjectProposal.tex
+++ b/ProjectProposal.tex
@@ -26,13 +26,12 @@
 \section{Background Research}\label{resarch}
 	There is background research that needs to be implemented to characterize primary hardware and software components that are needed for a successful project. \\
 	\subsection{Assessing Customer Needs}
-	To help define what this research needs to be on, we need to think of the customer's needs, and ponder a person, or group of people that would know the ultimate needs of a user. Team 3 has picked our sponsor, to be our primary point of contact for all things about the "super user". Our sponsor clearly defines what ArcelorMittal needs, and how the user will be interacting with our system. Jim has made it easy to contact him by both a personal telephone number, and emailing at any time of day.  To assess our customers needs, we need to assess how much time we are saving the user by creating this new safety equipment system. In addition we can measure how much more accurate our system is over their previous design. \\ 
+	To help define what this research needs to be on, we need to think of the customer's needs, and ponder a person, or group of people that would know the ultimate needs of a user. Team three's sponsor, our primary point of contact, is Jim Lang with ArcelorMittal. Our sponsor clearly defines ArcelorMittal's needs, and how the user will be interacting with our system. To assess our customers needs, we need to assess how much time we are saving the user by creating this new safety equipment system. In addition we can measure how much more accurate our system is over their previous design. \\ 
 	\subsection{Design Constraints}
 	With customer needs comes design constraints. One design constraint is time. We have been given one semester to work on this system. Another constraint is going to be cost. We have been given a budget of 500\$ to create this system.\\ 
 	\subsection{Feasibility of Designs}
-	Criteria for feasibility of design includes the amount of skill asked to complete a design. As undergraduate computer engineers, we are not equipped to create systems that are very mechanical, or that would include advanced computer programming principles (which would be better suited for graduate students in our field). The importance of creating a system that we know we have the skills to do so is very crucial to successful completion of the barcode scanner.  \\
-	Criteria that can be used to rank feasible designs is going to be time. How much time does the proposed action take? How well is the proposed design documented? Solutions supporting simple, easy to read documentation is preferred by team 3. \\
-	Trade off studies that need be conducted to assess the above concerns are going to be speed of response time, and difficulty to move our software development environment to production.
+	Criteria to judge the feasibility of the design has been outlined by our sponsor ArcelorMittal. We were given requirements necessary for designing and implementing a Minimum Viable Product. The requirements are based on ArcelorMitall's current implementation of problem, Field ID. To satisfy necessary criteria, our goal is to implement a software-based solution, hence; automating the entire process. Ultimately feasibility will be judged based on universal usability. In order to rank the feasible designs, team three must also consider criteria based on speed of response time, organization of documentation, report generation, and ability to publish software development environment into production. \\
+	Each set of conceptual designs/variations meets the feasibility criteria. Team three's solution meets the goals of the customer's needs; the proposed solution has been approved by both team sponsor and facilitator. Trade off studies that need be conducted to assess the above concerns are speed of response time, and difficulty to move our software development environment to production. 
 	\subsection{Risks}
 	Most risks are going to revolve around the security of our proposed system. This is solved by the implementation on ArcelorMittal's servers. ArcelorMittal has their own security team to ensure that the proposed system once moved to a production environment will be secure. In addition the data we are dealing with is not confidential.That being so, all code will be written in a secure manner, special attention will be paid to SQL queries, and SQL injections.   
 	\subsection{Overview of System Models}
