--- a/DB_ER.tex
+++ b/DB_ER.tex
@@ -65,7 +65,7 @@
 			\draw[link] (ins) (ins) edge [bend right,<-] (has4.west);
 			\draw[link] (loc) (loc) edge [bend right,<-] (has4.west);
 			\draw[link] (dev) (dev) edge [bend left,<-] (has4.east);
-			\draw[link] (qus) (qus) edge [bend left,<-] (has4.esat);
+			\draw[link] (qus) (qus) edge [bend left,<-] (has4.east);
 			
 		\node[entity] (rsp) [below=of has4] {Responce} edge (has4);
 		%\node[relationship] (chk) [above=of qus] {Checks} edge [->] (qus);
