--- a/title.tex
+++ b/title.tex
@@ -47,7 +47,7 @@
 		%----------------------------------------------------------------------------------------
 		
 		\HRule \\[0.2cm]
-		{ \huge \bfseries Project Proposal\\ ArcelorMittal USA\\ Safety Equipment Bar Code Scanner}\\[0.2cm] % Title of your document
+		{ \huge \bfseries Final Project Proposal\\ ArcelorMittal USA\\ Safety Equipment Bar Code Scanner}\\[0.2cm] % Title of your document
 		\HRule \\[1.5cm]
 		
 		%----------------------------------------------------------------------------------------
@@ -92,14 +92,34 @@
 		%	LOGO SECTION
 		%----------------------------------------------------------------------------------------
 		
-		\includegraphics{egr_logo.png}\\[1cm]  % Include a department/university logo - this will require the graphicx package
 		
+		
+		\begin{minipage}[t]{0.5\textwidth}
+			\begin{flushright} 
+		\includegraphics{egr_logo.png}\\[1cm]  % Include a department/university logo - this will require the graphicx package
+		\end{flushright}
+		\end{minipage}\\[3cm]
+		\begin{minipage}[t]{0.5\textwidth}
+			\begin{flushleft} 
 		\includegraphics{MSUSealBlack1inch.png}
-		%\includegraphics{MSU-Wordmark-Black.png}
+			\end{flushleft}
+		\end{minipage}\\[3cm]
+	\begin{abstract}
+		Design team three has been asked to create a system to keep track of safety equipment on ArcelorMittal's buildings. To do this the team needs to build some systems. These systems will enable administrators to both monitor compliance standards on areas they are in charge of, and make sure that safety equipment is being properly checked and documented. Reports will be sent out periodically on the above to said administrators.  On the user end, an Android application  that uses a scanner will be created that will enable users to quickly answer questions on safety equipment standards.  This project proposal is broken into the following parts:
+		\begin{enumerate}
+			\item The teams current understanding of the project.
+			\item Define the project in such a way that it will be easy to follow for developers that are maintaining the project for years to come.
+			\item Demonstrate that the team has internalized the design challenge faced.
+		\end{enumerate}
+	\end{abstract}
 		\\[1cm] 
 		% Include a department/university logo - this will require the graphicx package
 		%----------------------------------------------------------------------------------------
 		
-		\vfill % Fill the rest of the page with whitespace
+
+
+		
+		
+		%\vfill % Fill the rest of the page with whitespace
 		
 \end{titlepage}
